--- a/style.css
+++ b/style.css
@@ -9,13 +9,10 @@ font-size: 16px;
 
 .name{
     color: #9B9FB5;  
-    text-align: center;
 }
 
 .foto-description{
-    padding: 30px 70px 90px 70px;
-    width: 80%;
-    margin: auto;
+    width: 100%;
 }
 
 .imagem{ 
@@ -27,19 +24,16 @@ font-size: 16px;
 }
 
 .foto{
-    display: inline-block;
-    width: 50%;
-    text-align: center;
+    
+float: left;
+margin-right: 30px;
 }
 
 .description{
-    display: inline-block;
     color: #7A6174;
     font-size: 1.4em;
-    width: 49%;
-    vertical-align: top;
-    
-    
+    width: 70%;  
+     
 }
 
 .nationality-green{
@@ -57,8 +51,8 @@ font-size: 16px;
 
 #skills{
     color: #7A6174;
-    text-align: center;
     margin: 30px;
+    clear: left;
 }
 
 .skills{
